Correção do teste de integração
